# my-nameservice

./: Cargo.toml  builder.dockerfile  push-branch.sh  push-branches.sh  readme.md
src/: contract.rs  error.rs  msg.rs  state.rs
tests/: contract.rs
