[package]
name = "my-nameservice"
version = "0.1.0"
edition = "2021"

# Linkage options. More information: https://doc.rust-lang.org/reference/linkage.html
[lib]
crate-type = ["cdylib", "rlib"]

[features]
# Use library feature to disable all instantiate/execute/query exports
library = []

# Optimizations in release builds. More information: https://doc.rust-lang.org/cargo/reference/profiles.html
[profile.release]
opt-level = "z"
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true

[dependencies]
cosmwasm-schema = "1.5.8"
cosmwasm-std = "1.5.8"
cw721 = { git = "https://github.com/public-awesome/cw-nfts", tag = "v0.19.0", version = "0.19.0" }
thiserror = "1.0.63"

[dev-dependencies]
cw-multi-test = "1.2.0"
